added final result to task 1

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/Mariana-Diachun/goit-js-hw-08#readme",
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "@vimeo/player": "^2.17.1",
+    "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.10.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
